Atualização de arquivos
Atualização da página principal.

--- a/projeto-portifólio/index.html
+++ b/projeto-portifólio/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/custom.css">
     <title>Eli Santos - Portifolio Online</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0:100,400..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -18,10 +22,17 @@
         </ul>
     </div>
     <div class="capa">
-        <img src="/images/foto_portifolio1.png" width="400px" height="400px" alt="Foto do Eli Santos">
-        <h1>Eli <span>Santos Resedá</span></h1>
-        <h2>Analista de Sistemas - Desenvolvedor de páginas web & desenvolvedor de software.</h2>
+
+        <div class="profile-pic">
+            <img src="/images/foto_portifolio1.png" alt="Foto do Eli Santos">
+        </div>
+        <div class="profile-title">
+            <h1>Eli <span>Santos Reseda</span> </h1>
+            <h2>Analista de Sistemas - Desenvolvedor Web - Front End</h2>
+        </div>
+
     </div>
+
 </body>
 
 </html>
