Atualização de arquivos
atualização de arquivos com implementação de JavaScript.

--- a/projeto-portifólio/index.html
+++ b/projeto-portifólio/index.html
@@ -14,17 +14,16 @@
 </head>
 
 <body>
-    <div class="navigation">
+    <div id="navigation" class="navigation">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="portifolio.html">Portifolio</a></li>
             <li><a href="curriculo.html">Curriculo</a></li>
             <li><a href="contato.html">Contato</a></li>
-            <li class="threeline-icon" onclick="openNavy()">&#9776;</li>
+            <li id="threeline-icon" class="threeline-icon" onclick="openNavy()">&#9776;</li><!-- -->
         </ul>
     </div>
     <div class="capa">
-
         <div class="profile-pic">
             <img src="images/foto_portifolio1.png" alt="Foto do Eli Santos">
         </div>
@@ -32,9 +31,7 @@
             <h1>Eli <span>Santos Reseda</span> </h1>
             <h2>Analista de Sistemas - Desenvolvedor Web - Front End</h2>
         </div>
-
     </div>
-
 </body>
 
 </html>
