--- a/projeto-portifólio/webdesign-psp.html
+++ b/projeto-portifólio/webdesign-psp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -10,18 +10,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0:100,400..900;1,100..900&display=swap"
         rel="stylesheet">
+    <meta name="viewport" content="width-device-width, initial-scale-1.0">
+    <script type="text/javascript" src="js/scripts.js"></script>
 </head>
 </head>
-
-<body>
-    <div class="navigation">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="portifolio.html">Portifolio</a></li>
-            <li><a href="curriculo.html">Curriculo</a></li>
-            <li><a href="contato.html">Contato</a></li>
-            <li class="threeline-icon">&#9776;</li>
-        </ul>
+<bod<div id="navigation" class="navigation">
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="portifolio.html">Portifolio</a></li>
+        <li><a href="curriculo.html">Curriculo</a></li>
+        <li><a href="contato.html">Contato</a></li>
+        <li id="threeline-icon" class="threeline-icon" onclick="openNavy()">&#9776;</li><!-- -->
+    </ul>
     </div>
     <div class="main">
         <ul class="caminho">
@@ -53,7 +53,6 @@
         <a class="back-link" href="portifolio.html">&larr;Voltar ao Portifolio</a>
 
     </div>
-
-</body>
+    </body>
 
 </html>
