--- a/projeto-portifólio/contato.html
+++ b/projeto-portifólio/contato.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -10,16 +10,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0:100,400..900;1,100..900&display=swap"
         rel="stylesheet">
+    <meta name="viewport" content="width-device-width, initial-scale-1.0">
+    <script type="text/javascript" src="js/scripts.js"></script>
 </head>
 
 <body>
-    <div class="navigation">
+    <div id="navigation" class="navigation">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="portifolio.html">Portifolio</a></li>
             <li><a href="curriculo.html">Curriculo</a></li>
             <li><a href="contato.html">Contato</a></li>
-            <li class="threeline-icon">&#9776;</li>
+            <li id="threeline-icon" class="threeline-icon" onclick="openNavy()">&#9776;</li><!-- -->
         </ul>
     </div>
     <div class="main">
@@ -39,7 +41,6 @@
         <h3>Redes Sociais:</h3>
 
         <p>
-
             <a href="#"><img class="social-img" src="images/instagram.png" alt="link para o instagram"></a>
 
             <a href="https://www.linkedin.com/in/eli-reseda/" target="_blank"><img class="social-img"
@@ -51,8 +52,6 @@
         <br>
         <a class="back-link" href="index.html">&larr;Voltar ao Início</a>
     </div>
-
-
 </body>
 
 </html>
